--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.mike</groupId>
-    <artifactId>mike-demo-springboot</artifactId>
+    <groupId>com.hongwei</groupId>
+    <artifactId>hongwei-homepage-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-<!--    <packaging>war</packaging>-->
-    <name>mike-demo-springboot</name>
-    <description>mike-demo-springboot</description>
+<!--    <packaging>jar</packaging>-->
+    <packaging>war</packaging>
+    <name>hongwei-homepage-service</name>
+    <description>hongwei-homepage-service</description>
 
     <!--2.1.3-->
     <parent>
@@ -69,6 +69,11 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.4</version>
         </dependency>
     </dependencies>
 
