--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <groupId>com.hongwei</groupId>
     <artifactId>hongwei-homepage-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-<!--    <packaging>war</packaging>-->
+<!--    <packaging>jar</packaging>-->
+    <packaging>war</packaging>
     <name>hongwei-homepage-service</name>
     <description>hongwei-homepage-service</description>
 
