--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ hs_err_pid*
 logs/
 target/
 src/main/resources/auth.yaml
+src/main/resources/application.properties
+src/main/resources/application.yml
+.idea/compiler.xml
