--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -1,6 +1,7 @@
+#For local Windows NT MySQL Test
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=user
-spring.datasource.password=Td123456
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
