--- a/src/main/resources/application.yml.sample
+++ b/src/main/resources/application.yml.sample
@@ -1,3 +1,4 @@
+#For CentOS MySQL Deployment
 logging:
   file: "logs/config/hongwei_springboot2.log"
 info:
@@ -11,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test
     username: root
-    password: Td123456#
+    password: 123
     driverClassName: com.mysql.jdbc.Driver
 
 jpa:
