add fetch au covid19 data cache

--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -1,4 +1,4 @@
-#For local Windows NT MySQL Test
+#For both local Windows NT MySQL Debug & Web server
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=user
 spring.datasource.password=xxx
