--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -1,3 +1,6 @@
+#For support multiple springboot application on same tomcat.
+spring.jmx.default-domain=application-service-home
+
 #For both local Windows NT MySQL Debug & Web server
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=user
