--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -6,8 +6,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=user
 spring.datasource.password=xxx
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+server.error.include-message=always
+
+#Security
+jwt.authorizationHeader=Authorization
+jwt.authorizationBearer=Bearer
+jwt.authorizationEndpoint=/authenticate/authorise.do
 
 #debug
 server.port=8081
