--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -3,8 +3,8 @@ spring.jmx.default-domain=application-service-home
 
 #For both local Windows NT MySQL Debug & Web server
 spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=user
-spring.datasource.password=xxx
+spring.datasource.username={mysql username}
+spring.datasource.password={mysql password}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 server.error.include-message=always
@@ -13,6 +13,9 @@ server.error.include-message=always
 jwt.authorizationHeader=Authorization
 jwt.authorizationBearer=Bearer
 jwt.authorizationEndpoint=/authenticate/authorise.do
+jwt.corsAllowDomains[0]={domain name}
+jwt.corsAllowDomains[1]=http://localhost:3000
+#jwt.authorizationDomain=https://{domain name}/application-service-authentication
 
 #debug
 server.port=8081
